# vision-desktop-automation-app

./: .gitignore  README.md  pyproject.toml
src/vision_desktop_automation/: __init__.py  api.py  automation.py  config.py  main.py  models.py  workflow.py
src/vision_desktop_automation/grounding/: __init__.py  base.py  coarse_to_fine.py  ocr_locate.py  prompts.py  template_cache.py
src/vision_desktop_automation/grounding/providers/: openai.py
src/vision_desktop_automation/vision/: __init__.py  annotate.py  preprocess.py  screenshot.py
