[project]
name = "vision-desktop-automation"
version = "0.1.0"
description = "Vision-based Windows desktop automation that dynamically grounds and clicks the Notepad icon anywhere on screen."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Mohamed-Elshesheny", email = "Mohamedelshesheny62@gmail.com" }
]
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mss>=10.2.0",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rapidocr-onnxruntime>=1.4.4",
    "pygetwindow>=0.0.9",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
]

[project.scripts]
vision-desktop-automation = "vision_desktop_automation:main"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "vulture>=2.16",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "BLE", "ARG", "RUF"]
ignore = [
    "E501",     # line too long — handled by formatter
    "RUF001",   # ambiguous × / – in strings — intentional Unicode
    "RUF002",   # ambiguous × / – in docstrings — intentional Unicode
    "RUF003",   # ambiguous × / – in comments — intentional Unicode
]

